--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -8,7 +8,7 @@ sites:
     url: https://meta.w.xvnet.eu.org
   - name: Xensor V Network ntfy
     url: https://ntfy.xvnet.eu.org
-  - name: 存档计划
+  - name: Project Archive
     url: https://lakeus.xyz
   - name: Wikipedia
     url: https://en.wikipedia.org
