--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -13,22 +13,19 @@ sites:
   - name: Wikipedia
     url: https://en.wikipedia.org
   - name: Wikitech
-    url: https://wikitech.org
+    url: https://wikitech.wikimedia.org
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
-  cname: demo.upptime.js.org
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  cname: uptime.xtexx.eu.org
+  baseUrl: /
+  logoUrl: https://xtexx.eu.org/avatar.webp
+  name: "xtex's Uptime"
+  introTitle: "Some service statuses"
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Home
+      href: https://xtexx.eu.org
 
 assignees:
   - xtexChooser
