--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -21,6 +21,7 @@ status-website:
   logoUrl: https://xtexx.eu.org/avatar.webp
   name: "xtex's Uptime"
   introTitle: "Some service statuses"
+  theme: dark
   navbar:
     - title: Status
       href: /
