--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,6 +2,8 @@ owner: xtexChooser
 repo: uptime
 
 sites:
+  - name: Xensor V Network IdM
+    url: https://id.xvnet.eu.org
   - name: Xensor V Wiki
     url: https://w.xvnet.eu.org
   - name: Xens Meta Wiki
